--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ h1 {
   color: blueviolet;
 }
 footer{
-  display:inline-bottom;
-  bottom:0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
 
