--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ h1 {
   color: blueviolet;
 }
 footer{
+
+  background-color: DarkSalmon;
+  color: white;
+  text-align: center;  
   position: absolute;
   bottom: 0;
   width: 100%;
