--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,12 @@ h1 {
   color: blueviolet;
 }
 footer{
-
   background-color: DarkSalmon;
   color: white;
   text-align: center;  
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
+  height: 50px;  
 }
 
