--- a/css/styles.css
+++ b/css/styles.css
@@ -7281,7 +7281,7 @@ h3 {
   .masthead .masthead-subheading {
     font-size: 1.25rem; }
   .masthead .masthead-avatar {
-    width: 15rem; cursor: pointer; position: absolute; z-index: 1000; left: 298px; top: -14px;}
+    cursor: pointer; position: absolute; z-index: 1000;}
 
 @media (min-width: 992px) {
   .masthead {
