--- a/css/styles.css
+++ b/css/styles.css
@@ -7281,7 +7281,7 @@ h3 {
   .masthead .masthead-subheading {
     font-size: 1.25rem; }
   .masthead .masthead-avatar {
-    width: 15rem; cursor: pointer; z-index: 1000;}
+    width: 15rem;}
 
 @media (min-width: 992px) {
   .masthead {
