--- a/css/styles.css
+++ b/css/styles.css
@@ -7281,12 +7281,12 @@ h3 {
   .masthead .masthead-subheading {
     font-size: 1.25rem; }
   .masthead .masthead-avatar {
-    width: 15rem;}
+    width: 15rem; cursor: pointer; position: absolute;}
 
 @media (min-width: 992px) {
   .masthead {
     padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem; }
+    padding-bottom: 6rem; }cursor: pointer; position: absolute;
     .masthead .masthead-heading {
       font-size: 4rem;
       line-height: 3.5rem; }
