--- a/css/styles.css
+++ b/css/styles.css
@@ -7281,7 +7281,7 @@ h3 {
   .masthead .masthead-subheading {
     font-size: 1.25rem; }
   .masthead .masthead-avatar {
-    width: 15rem; cursor: pointer; position: absolute; z-index: 1000;}
+    width: 15rem;}
 
 @media (min-width: 992px) {
   .masthead {
@@ -7414,3 +7414,7 @@ form .row:first-child .floating-label-form-group {
 
 .btn-social {
   margin-bottom: 0.5rem; }
+
+#game{
+cursor: pointer; position: absolute; z-index: 1000; left: 298px; top: -14px;
+}
