--- a/css/styles.css
+++ b/css/styles.css
@@ -7419,6 +7419,8 @@ form .row:first-child .floating-label-form-group {
   vertical-align: top;
   cursor: pointer; 
   position: absolute; 
+  max-width: 100%;
+  height: auto;  
   z-index: 1000;
   border-style: none;
 }
