--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,7 @@ pre {
   overflow-y: scroll; }
 
 .container {
+  position:relative;
   width: 100%;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
